Don't display pinned Crostini apps if Crostini UI is not allowed

Due to either syncing or using multi-profile, we can get into a state
where synced pin state lists Crostini apps although we shouldn't be
displaying them. This results in weirdness like blank-space icons for
the Terminal, or penguin icons for apps with icons, when these pinned
items are supposed to be hidden. Clicking the shelf icons does nothing
due to https://crrev.com/c/1212373. This CL prevents these broken
pinned apps from appearing.

Bug: 869266
Change-Id: I13ca91b8055cf43003bf1d467ca28161eb289e29
Reviewed-on: https://chromium-review.googlesource.com/1215532
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590196}
Former-commit-id: 98d93c3ac577b3c9e680c7463595529c0f88924e